# job-portal-site

./: .gitignore  README.md  manage.py  pyproject.toml
app/: settings.py  urls.py  wsgi.py
job/: forms.py  helpers.py  models.py  urls.py  views.py
job/migrations/: 0001_initial.py  0002_auto_20210713_0550.py  0002_auto_20210715_0145.py  0003_alter_listing_compensation.py  0004_listing_favorited_by.py  0005_auto_20210719_0255.py  0006_alter_listing_post_date.py  0007_alter_listing_post_date.py  0008_alter_listing_post_date.py
job/templatetags/: is_job_already_applied.py  is_job_already_saved.py
notifications/: apps.py
static/: auth.css  createListing.css  index.css  listing.css  profile.css  search.css
templates/: 404.html  500.html  alternate_base.html  base.html  base_template.html  create_listing.html  dashboard.html  edit_profile.html  header.html  home.html  listing.html  listing_detail.html  login.html  notifications.html  profile.html  register.html  search.html  signup.html
templates/job/: all-applicants.html  applicant-details.html  dashboard.html  index.html  job-edit.html  job-list.html  job-single.html  post-job.html  result.html  search.html
templates/user/: employee-edit-profile.html  employee-registration.html  employer-registration.html  login.html
user/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_auto_20210708_1604.py  0002_auto_20210715_1808.py  0003_auto_20210708_1718.py  0003_user_employee.py  0004_alter_user_employee.py  0005_alter_user_employee.py  0007_auto_20210723_2028.py  (+2 more)
(+1 files in other folders)
